# iris

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  TODO  milestones.md  plan.md  refactor.md  run.py  t.txt
.github/workflows/: build_artifact.yml  main.yml  make_release.yml
cmake/: ci_toolchain.cmake  version.cmake
include/: README.md  libraries.md
include/argparse/: argparse.hpp
include/catch2/include/catch2/: catch_all.hpp  catch_approx.hpp  catch_assertion_info.hpp  catch_assertion_result.hpp  catch_case_sensitive.hpp  catch_config.hpp  catch_get_random_seed.hpp  catch_message.hpp  catch_section_info.hpp  catch_session.hpp  catch_tag_alias.hpp  catch_tag_alias_autoregistrar.hpp  catch_template_test_macros.hpp  catch_test_case_info.hpp  catch_test_macros.hpp  catch_test_run_info.hpp  catch_test_spec.hpp  catch_timer.hpp  catch_tostring.hpp  catch_totals.hpp  catch_translate_exception.hpp  catch_user_config.hpp  catch_version.hpp  catch_version_macros.hpp
include/catch2/include/catch2/benchmark/: catch_benchmark.hpp  catch_benchmark_all.hpp  catch_chronometer.hpp  catch_clock.hpp  catch_constructor.hpp  catch_environment.hpp  catch_estimate.hpp  catch_execution_plan.hpp  catch_optimizer.hpp  catch_outlier_classification.hpp  catch_sample_analysis.hpp
include/catch2/include/catch2/generators/: catch_generator_exception.hpp  catch_generators.hpp  catch_generators_adapters.hpp  catch_generators_all.hpp  catch_generators_random.hpp  catch_generators_range.hpp
include/catch2/include/catch2/interfaces/: catch_interfaces_all.hpp  catch_interfaces_capture.hpp  catch_interfaces_config.hpp  catch_interfaces_enum_values_registry.hpp  catch_interfaces_exception.hpp  catch_interfaces_generatortracker.hpp  catch_interfaces_registry_hub.hpp  catch_interfaces_reporter.hpp  catch_interfaces_reporter_factory.hpp  catch_interfaces_tag_alias_registry.hpp  catch_interfaces_test_invoker.hpp  catch_interfaces_testcase.hpp
include/catch2/include/catch2/internal/: catch_assertion_handler.hpp  catch_case_insensitive_comparisons.hpp  catch_clara.hpp  catch_commandline.hpp  catch_compare_traits.hpp  catch_compiler_capabilities.hpp  catch_config_android_logwrite.hpp  catch_config_counter.hpp  catch_config_prefix_messages.hpp  catch_config_static_analysis_support.hpp  catch_config_uncaught_exceptions.hpp  catch_config_wchar.hpp  catch_console_colour.hpp  catch_console_width.hpp  catch_container_nonmembers.hpp  catch_context.hpp  catch_debug_console.hpp  catch_debugger.hpp  catch_decomposer.hpp  catch_deprecation_macro.hpp  catch_enforce.hpp  catch_enum_values_registry.hpp  catch_errno_guard.hpp  catch_exception_translator_registry.hpp  catch_fatal_condition_handler.hpp  catch_floating_point_helpers.hpp  catch_getenv.hpp  catch_is_permutation.hpp  (+57 more)
include/catch2/share/Catch2/: gdbinit  lldbinit
include/catch2/share/pkgconfig/: catch2-with-main.pc  catch2.pc
include/cli11/: CLI11.hpp
include/rawterm/: rawterm.h
include/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  fwd.h  logger-inl.h  logger.h  mdc.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h  tweakme.h  version.h
include/spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
include/spdlog/details/: backtracer-inl.h  backtracer.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os-inl.h  os.h  periodic_worker-inl.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h  udp_client-windows.h  udp_client.h
include/spdlog/fmt/: bin_to_hex.h  fmt.h
include/spdlog/fmt/bundled/: args.h  base.h  chrono.h  color.h  compile.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
include/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  callback_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  kafka_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  udp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
include/ut/: ut.hpp
src/: CMakeLists.txt  action.cpp  action.h  actions.cpp  actions.h  buffer.cpp  buffer.h  change.h  constants.h  controller.cpp  controller.h  cursor.h  editor.cpp  editor.h  enumerate.h  file_io.cpp  file_io.h  file_manip.cpp  file_manip.h  filesystem.cpp  filesystem.h  flags.h  gapbuffer.h  gapvector.h  handle_keypress.cpp  keypress.cpp  logger.h  main.cpp  model.cpp  model.h  rawterm_wrapper.cpp  signal_tracker.h  text.cpp  text.h  text_io.cpp  text_io.h  text_manip.cpp  text_manip.h  text_transform.cpp  text_transform.h  (+7 more)
src/highlighting/: CMakeLists.txt  highlighter.cpp  highlighter.h  languages.h  regex_groups.h  theme_parsing.h
tests/: CMakeLists.txt  action_test.cpp  buffer_test.cpp  controller_test.cpp  cursor_test.cpp  editor_test.cpp  enumerate_test.cpp  file_io_test.cpp  file_manip_test.cpp  filesystem_test.cpp  gapbuffer_test.cpp  gapvector_test.cpp  highlighting_test.cpp  logger_test.cpp  main.cpp  model_test.cpp  test_utils.h  text_io_test.cpp  text_manip_test.cpp  text_transform_test.cpp  utils.h  view_test.cpp  viewport_test.cpp
tests/fixture/: example_file.txt  lorem_ipsum.txt  readonly_file.txt  test_file_1.txt  test_file_2.txt  very_long_line.txt
tests/integration/: cmd_ui_test.py  command_mode.py  command_mode_test.py  insert_mode_test.py  insertion_test.py  normal_mode_test.py  setup.py  signals_test.py  suspend_test.py  ui_test.py  ui_tests.py
tests/integrations/: setup.py  ui_tests.py
(+46 files in other folders)
